[project]
name = "temp-readings"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sche34"}
]
dependencies = [
    "vcgencmd==0.1.1",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
]
requires-python = "~=3.11"

[project.scripts]
run = 'temp_readings.logger:main'
visualize = 'temp_readings.visualize:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/temp_readings"]
